Bug 117506 - Blue textbox background when pasting sheets from clipboard
Summary: Blue textbox background when pasting sheets from clipboard
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
6.1.0.0.alpha1+
Hardware: All Windows (All)
: medium normal
Assignee: Armin Le Grand (collabora)
URL:
Whiteboard: target:6.1.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Regressions-AW080
  Show dependency treegraph
 
Reported: 2018-05-08 17:35 UTC by Telesto
Modified: 2018-05-29 13:52 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file (10.54 KB, application/vnd.oasis.opendocument.presentation)
2018-05-08 17:36 UTC, Telesto
Details
Screencast (471.74 KB, video/mp4)
2018-05-08 18:35 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2018-05-08 17:35:57 UTC
Description:
Blue textbox background when pasting from clipboard sheets from clipboard

Steps to Reproduce:
1. Open the attached file
2. Select all the sheets & Copy
3. Close the presentation (back to start center) (required)
4. Open a new impress document (and ignore the template selector)
5. Paste
6. A blue textbox background appears (start from the third sheet)


Actual Results:  
Blue textbox background

Expected Results:
The same sheet as copied



Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 6.1.0.0.alpha1+
Build ID: 08441d466dd70c203a519a133aaf1a5997adbbd3
CPU threads: 4; OS: Windows 6.3; UI render: GL; 
TinderBox: Win-x86@42, Branch:master, Time: 2018-05-06_23:59:40
Locale: nl-NL (nl_NL); Calc: CL


User-Agent: Mozilla/5.0 (Windows NT 6.3; WOW64; rv:52.0) Gecko/20100101 Firefox/52.0
Comment 1 Telesto 2018-05-08 17:36:10 UTC
Created attachment 141981 [details]
Example file
Comment 2 Xisco Faulí 2018-05-08 18:28:48 UTC
I can't reproduce it in

Version: 6.1.0.0.alpha0+
Build ID: a16275a3647a2fba9913ed23e8329e45b02123b4
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

nor in

Version: 6.1.0.0.alpha0+
Build ID: a16275a3647a2fba9913ed23e8329e45b02123b4
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: x11; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group
Comment 3 Xisco Faulí 2018-05-08 18:35:15 UTC
Reproduced in

Version: 6.1.0.0.alpha1+
Build ID: ecf50fe71596c3edba8ce437481ab80ae1cd8935
CPU threads: 1; OS: Windows 6.1; UI render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2018-05-07_23:52:08
Locale: es-ES (es_ES); Calc: group

but not in

Versión: 6.0.3.2
Id. de compilación: 8f48d515416608e3a835360314dac7e47fd0b821
Subprocs. CPU: 1; SO: Windows 6.1; Repres. IU: predet.; 
Configuración regional: es-ES (es_ES); Calc: group
Comment 4 Telesto 2018-05-08 18:35:47 UTC
Created attachment 141984 [details]
Screencast
Comment 5 Xisco Faulí 2018-05-09 11:32:30 UTC
Regression introduced by:

author	Armin Le Grand <Armin.Le.Grand@cib.de (CIB)>	2018-03-01 15:54:32 +0100
committer	Armin Le Grand <Armin.Le.Grand@cib.de>	2018-04-07 00:28:30 +0200
commit dfefe448c41921f2f1e54d3f69b8b9e89031d055 (patch)
tree 1aace31054b5740e2faffcbc5de66a791be27f7d
parent eba4d5b2b76cefde90cb3d6638c736f435023a45 (diff)
SOSAW080: Added first bunch of basic changes to helpers

Bisected with: bibisect-win32-6.1

Adding Cc: to Armin Le Grand
Comment 6 Armin Le Grand (collabora) 2018-05-09 17:57:58 UTC
Can confirm, will have to talke a look...
@Telesto: Thanks for the task and the Screencast! Just one comment: When doing a screencast, could you use the context-menu to select/all and copy, then it gets even clearer immediately.
Comment 7 Armin Le Grand (collabora) 2018-05-18 15:43:16 UTC
Very strange
- copy/paste from one impress to a 2nd, same exe -> n.p. -> internal shortcut, page is cloned
- copy/paste impress one app -> impress 2nd app -> no paste possible. Tried with combinations actualmaster/actualmaster and actualmaster/lo-6-0. That *should* be allowed...?

Only way to reproduce seems really to go back to StartCenter, thus it's not very probable to happen at all...
Comment 8 Armin Le Grand (collabora) 2018-05-18 15:48:07 UTC
Tried to reproduce:
- Start LO
- new Impress
- duplicate slide
- copy new one
- close
- new impress
- paste
-> no problem

When using same but
- new slide
-> can reproduce

Does not happen when
- new Impress
- new slide
- copy new one
- new impress
- paste
-> no problem

Indeed *have* to close all Imperss apps open.
Comment 9 Armin Le Grand (collabora) 2018-05-18 15:51:34 UTC
Also happens when:
- new Impress(a)
- new Impress(b)
- new slide
- copy
- close (b)
- pase in still open (a)
-> problem happens

Thus it's not all impress be closed, but close the one that holds the copied slide. This is probably because in that case the clipboard content gets 'flushed' using a save file to the system clipboard.

To reproduce:
- copy slide
- close impress you are in
- paste (already open or newly opened impress)
Comment 10 Armin Le Grand (collabora) 2018-05-18 15:58:04 UTC
Does not happen with BlankSlide (obvious) and TitleSlide. Testing others...
Not happens with:
- TitleSlide
- TitleOnly
- CenteredText

-> Happens with all SdrObjects combined with the Content-Master-Object (NOT the Title-Master_Object)
Comment 11 Armin Le Grand (collabora) 2018-05-18 16:06:15 UTC
Having one slide with Layout 'Title, Content' copy/pasted(a) (with the error) and one directly created(b) (New Slide) shows;
- a's Title and b's Title have 'PresentationStyle' 'Title'
- a's Content has 'DrawingStyle' 'Default'
- b's Content has 'PresentationStyle' 'Outline 1'
-> during save/load, that style gets lost...
Comment 12 Armin Le Grand (collabora) 2018-05-18 16:17:44 UTC
When saving/reloading that combination, a's content keeps 'Default', but gets invisible -> gets painted/shown differently.

Much more strange:
- new Impress(a)
- new Impress(b)
- New Slide in b
- copy
- paste to a
-> all good
- close b
-> pasted slide in a *changes* to the error -> DrawStyleDefault (!)

This is a hint that the Styles themselves are *somehow* mixed between the Documents while both are open...?

Checking this with lo-6-0...
Comment 13 Armin Le Grand (collabora) 2018-05-18 16:19:50 UTC
All good in lo-6-0, thus debugging now what might have changed...
Comment 14 Armin Le Grand (collabora) 2018-05-18 18:08:11 UTC
Debugged through old (lo-6-0) and new code in parallel to see what happens. Found the reason and changed/fixed it. Interestingly, already had a todo-note at that place :-)
For more info, read the comments at the fix. Will add asap.
Comment 15 Armin Le Grand (collabora) 2018-05-18 18:11:20 UTC
Fix on gerrit (see https://gerrit.libreoffice.org/#/c/54555/)
Comment 16 Commit Notification 2018-05-19 13:08:38 UTC
Armin Le Grand committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=bc6dd64fe2d8347e20ef4d560024c5e861f07aca

tdf#117506: Add using correct StyleSheet on ::Clone

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 17 Armin Le Grand (collabora) 2018-05-19 18:07:21 UTC
Checked on newest master with added fix, all good.
Comment 18 Telesto 2018-05-22 19:19:48 UTC
(In reply to Armin Le Grand (CIB) from comment #17)
> Checked on newest master with added fix, all good.

Still happening in a corner case:
1. open Impress
2. Select the Classy Red template in the Template selector
3. Select all slides (CTRL+A)
4. Click the sunset template in the Sidebar (master slides)
5. Copy all slides (CTRL+C)
5. Open a new Impress Document
6. Cancel the template selector
7. Paste the slides (CTRL+V)
8. Select the third slide -> blue background
Comment 19 Armin Le Grand (collabora) 2018-05-24 09:23:52 UTC
Correct, could reproduce. Also very strange, Style seems not to be 'Default'. Selecting Object and using 'Edit Style...' in the context menu blocks LO (can be circumvented by clicking on another slide, though). Have to check what LO-6-0 did here...
Comment 20 Armin Le Grand (collabora) 2018-05-24 09:28:32 UTC
Hah - LO-6-0 does the same :-(
Comment 21 Armin Le Grand (collabora) 2018-05-24 09:33:20 UTC
Also happens when just copying the slide in question.
Also happens when copying slide in question and closing 1st impress.
Comment 22 Telesto 2018-05-24 15:34:17 UTC
> Still happening in a corner case:
> 1. open Impress
> 2. Select the Classy Red template in the Template selector
> 3. Select all slides (CTRL+A)
> 4. Click the sunset template in the Sidebar (master slides)
> 5. Copy all slides (CTRL+C)
> 5. Open a new Impress Document
> 6. Cancel the template selector
> 7. Paste the slides (CTRL+V)
> 8. Select the third slide -> blue background

Inherited; also found in:
LibreOffice 3.3.0 
OOO330m19 (Build:6)
tag libreoffice-3.3.0.4
Comment 23 Armin Le Grand (collabora) 2018-05-24 16:02:25 UTC
@Telesto: Since this one was about AW080 regression, how about adding a new task for the inherited stuff? Alone to not get confused with the MetaTask AW080-Regressions...?
Comment 24 Telesto 2018-05-24 16:26:11 UTC
(In reply to Armin Le Grand (CIB) from comment #23)
> @Telesto: Since this one was about AW080 regression, how about adding a new
> task for the inherited stuff? Alone to not get confused with the MetaTask
> AW080-Regressions...?

I will open a new bug report, and add it to the pile of inherited stuff (219 bugs at this point :-).  Should checked a older versions before reporting my finding here, anyway. A new meta-task bug tracker isn't needed, in my opinion. Search for Impress & Inherited from OpenOffice.

Btw, thanks for all the effort put in AW080. Quite impressive. It's always a bit sad to notice that all those changes are invisible for the end-user. Except for the complains about suddenly broken things ;-).
Comment 25 Armin Le Grand (collabora) 2018-05-26 18:21:29 UTC
Hi Telesto,
just a short note: I have added the next change for AW080 stuff to the master. This currently makes two of the footer fields in Impress Blue - I am on it... :-)
Comment 26 Telesto 2018-05-26 19:24:08 UTC
(In reply to Armin Le Grand (CIB) from comment #25)
> Hi Telesto,
> just a short note: I have added the next change for AW080 stuff to the
> master. This currently makes two of the footer fields in Impress Blue - I am
> on it... :-)

Thanks for the info. For the record, another one:
1. Open Impress
2. Select DNA or Focus template
3. Save it
4. Reload to file -> Blue textbox
Comment 27 Xisco Faulí 2018-05-28 12:28:37 UTC
Hi Telesto,
Have you created the follow-up bugs? If so, could you please tell us the ids ?
Regards
Comment 28 Xisco Faulí 2018-05-29 13:52:44 UTC
Verified in

Version: 6.1.0.0.beta1+
Build ID: da49f4aeb8d5e9a7d2cba8855d911e7cc1d2f1e2
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

@Armin, Thanks for fixing this!!