tdf#117506: Add using correct StyleSheet on ::Clone

There was an error/missing implementation on Cloning
SdrPage(s)/SdrObject(s) to a new target-SdrModel. See
comments in the code-change and in the tdf-task for more
info.

Change-Id: Ibe673a4b14e1c44102f80f05ebbeae5b6a1bae8f